button color on mobile fix

--- a/myvote.client/src/index.css
+++ b/myvote.client/src/index.css
@@ -73,5 +73,6 @@ button:focus-visible {
   button {
     margin: 10px;
     background-color: #365FB7;
+    color: white;
   }
 }
